--- a/GPI_FrontTemplate-master/package.json
+++ b/GPI_FrontTemplate-master/package.json
@@ -12,18 +12,24 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/material": "^6.5.0",
+    "@mui/x-data-grid": "^8.14.1",
+    "@mui/x-date-pickers": "^8.14.1",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.8.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
+    "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "recharts": "^3.3.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/papaparse": "^5.3.16",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
